--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,6 @@
 
     <string name="location_updated">Location Updated: %1$s</string>
     <string name="launch_activity">Earth</string>
+    <string name="title_activity_plot">PlotActivity</string>
 
 </resources>
